# Bruker_to_ImageJ

./: .gitignore  README.md  __main__.py  pyproject.toml
domilyzer/: __main__.py
domilyzer/functions_gui/: __init__.py  flamingo_functions.py  general_functions.py  gui.py  olympus_functions.py
domilyzer/workflows/: __init__.py  bruker_workflow.py  flamingo_workflow.py  olympus_workflow.py
functions_gui/: __init__.py  bruker_functions.py  flamingo_functions.py  functions.py  general_functions.py  gui.py  olympus_fuctions.py  olympus_functions.py
main/: __init__.py  functions.py  gui.py  main_workflow.py
main_workflow/: __init__.py  functions.py  main_workflow.py
tests/: import_images_testing.ipynb
tests/assets/: bruker_multiplane_avg_hyperstack_arrays.npz  bruker_multiplane_hyperstack_arrays.npz  bruker_multiplane_max_hyperstack_arrays.npz  bruker_multiplane_proj_hyperstack_shapes.txt  bruker_singleplane_hyperstack_arrays.npz  olympus_avg_hyperstack_arrays.npz  olympus_noProject_hyperstack_arrays.npz
tests/test_data/193DCE_DC88_c-001/: 193DCE_DC88_c-001.companion.ome  193DCE_DC88_c-001.env  193DCE_DC88_c-001.xml  193DCE_DC88_c-001_Cycle00001_Ch1_000001.ome.tif  (+149 more)
tests/test_workflow/: multi-plane_t-series_one-ch-001_test.py
tests/test_workflows/: test_bruker_max.py  test_bruker_multiplane.py  test_bruker_multiplane_avg.py  test_bruker_multiplane_max.py  test_bruker_singleplane.py  test_olympus_avg.py  test_olympus_max.py  test_olympus_noProject.py
workflows/: __init__.py  bruker_workflow.py  flamingo_workflow.py  olympus_workflow.py
(+1388 files in other folders)
