[tool.poetry]
name = "domilyzer"
version = "0.1.0"
description = "raw microscope file conversion to Tiff files"
authors = ["Dominic Chomchai <chomchai@wisc.edu>"]
readme = "README.md"
packages = [{include = "domilyzer"}]

[tool.poetry.dependencies]
python = ">=3.8"
tifffile = "2021.7.2"
tqdm = "4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
